fixed horizontal scroll on touch and whell

--- a/sources/styles/style.css
+++ b/sources/styles/style.css
@@ -38,17 +38,14 @@ body {
 }
 
 .custom_scroll {
+    height: 17px;
     position: absolute;
     bottom: 20px;
-    overflow-x: auto;
-    border: 1px solid red;
+    overflow-x: scroll;
+    z-index: 100500;
+    /* border: 1px solid red; */
+    /* scroll-behavior: smooth; */
 }
-
-/* .custom_scroll {
-    position: absolute;
-    bottom: 20px;
-    overflow-x:scroll
-} */
 
 /* .dhx_timeline_scrollable_data {
     overflow-x: hidden !important;
